# bfl-flux-mcp

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
src/bfl_flux_mcp/: __init__.py  client.py  config.py  handlers.py  models.py  server.py  tools.py  utils.py
tests/: __init__.py  test_integration.py  test_server.py
