[project]
name = "bfl-flux-mcp"
version = "0.1.0"
description = "Minimal MCP server for Black Forest Labs Flux image generation"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Björn Büdenbender" }
]
requires-python = ">=3.11"
keywords = ["mcp", "flux", "bfl", "image-generation", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
bfl-flux-mcp = "bfl_flux_mcp.server:main"

[project.urls]
Repository = "https://gitlab.com/agentic-ai-forge/bfl-flux-mcp"
Homepage = "https://gitlab.com/agentic-ai-forge/bfl-flux-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bfl_flux_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
